if popup's height is higher than height left on the page, thus having to expand the page to show it, it now gets popped up on top rather than bottom, also fixed a bug with the overlapWidth not working properly where popup doesn't go more left even though it should've, need to still decide on width and height, make it by default a decent general size and make it resizeable by users, moved some functions inside the 404 checker to prevent unnecessary execution of code when popup shouldn't even show, fixed where if a non text node was selected and it had whitepsace in it, an error would occur with range.surroundContents(), using dom manipulation to make the selected text bold, and then look at that rather than the bold with range.surroundContents - also had an error where if I changed outerHTML it would deselect the word selected and only leave the whitespace, using a function to re-select the word afterwards, need to still take the bald away after click, not really necessary but probably a good idea

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,15 @@
 .selectedWord {
     position: absolute;
       background: rgb(1, 2, 2);
-    z-index: 1;
+    z-index: 9999999;
     width: fit-content;
     color: white;
     padding: 1px;
     margin-top: 30px;
     font-family: Calibri;
 	font-size: 15px;
-	height: 500px;
-	width: 400px;
+	height: 400px;
+	width: 300px;
 	-moz-user-select: none;
 	-webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
@@ -19,6 +19,9 @@
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
+table .sistemas:hover {
+	background: #1E1F26;
+  }
 .selectedWord:after, .selectedWord:before {
 	bottom: 100%;
 	left: 10%;
@@ -57,4 +60,8 @@
 	  -ms-user-select: none; /* Internet Explorer/Edge */
 		  user-select: none; /* Non-prefixed version, currently
 								supported by Chrome and Opera */
+}
+
+#DefineItTextToBold {
+	font-weight: unset;
 }
